# projectone

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: odata-connector.yml  oneflow.yml  projectoneflow.yml
connectors/spark/scala/http/: .gitlab-ci copy.yml  .gitlab-ci.yml  09-test-python-algos.ipynb  commands.txt  connector_file_testing.scala  connector_http_openapi.scala
connectors/spark/scala/odata/: README.md  build.sbt
connectors/spark/scala/odata/project/: plugins.sbt
connectors/spark/scala/odata/src/main/scala/io/github/narramukhesh/projectone/spark/odata/: ODataClient.scala  ODataException.scala  ODataHelper.scala  ODataMicroStream.scala  ODataPartition.scala  ODataScan.scala  ODataScanJob.scala  ODataSource.scala  ODataStreamOffset.scala  ODataTable.scala
connectors/spark/scala/odata/src/test/scala/io/github/narramukhesh/projectone/spark/odata/integration_testing/: ODataSparkTestSuite.scala
connectors/spark/scala/odata/src/test/scala/io/github/narramukhesh/projectone/spark/odata/unit_testing/: ODataClientTestSuite.scala  ODataSparkTestSuite.scala
oneflow/: README.md  pyproject.toml  setup.py
oneflow-framework/: README.md  pyproject.toml
oneflow-framework/environment/: requirements.txt
oneflow-framework/src/oneflow/framework/ci/: cli.py
oneflow-framework/src/oneflow/framework/ci/comment/: __init__.py  gitlab.py
oneflow-framework/src/oneflow/framework/cli/: __init__.py  blueprint.py  cli.py
oneflow-framework/src/oneflow/framework/connector/: azure_blob.py  databricks.py
oneflow-framework/src/oneflow/framework/contract/: project.py
oneflow-framework/src/oneflow/framework/contract/config/: __init__.py  objects.py
oneflow-framework/src/oneflow/framework/contract/env/: __init__.py
oneflow-framework/src/oneflow/framework/contract/strategy/: __init__.py  deploy.py
oneflow-framework/src/oneflow/framework/runner/: __init__.py  databricks.py  local.py
oneflow-framework/src/oneflow/framework/validation/: __init__.py  data_objects.py  pipeline.py
oneflow-framework/tests/unit_tests/: test_contract_env.py
oneflow/src/oneflow/core/: __init__.py  install.py
oneflow/src/oneflow/core/cli/: cli.py
oneflow/src/oneflow/core/deploy/: cli.py
oneflow/src/oneflow/core/deploy/terraform/: __init__.py  cli.py  databricks.py
oneflow/src/oneflow/core/event/: __init__.py  manager.py
oneflow/src/oneflow/core/execution/: write.py
oneflow/src/oneflow/core/execution/operator/: __init__.py
oneflow/src/oneflow/core/execution/operator/spark_task/: execution.py  input.py  output.py
oneflow/src/oneflow/core/execution/spark_task/: __init__.py  context.py  execution_fn.py
oneflow/src/oneflow/core/observability/: __init__.py  spark_listener.py
oneflow/src/oneflow/core/runtime/: __init__.py
oneflow/src/oneflow/core/schemas/: __init__.py  data_objects.py  deploy.py  event.py  execution.py  features.py  input.py  refresh.py  sources.py  state.py
oneflow/src/oneflow/core/secrets/: spark_secret.py
oneflow/src/oneflow/core/sources/: __init__.py  delta_source.py  kafka_source.py  odata_source.py
oneflow/src/oneflow/core/state/spark/: __init__.py  state.py
oneflow/src/oneflow/core/task/spark/: __init__.py  task.py
oneflow/src/oneflow/core/utils/: __init__.py  delta.py  spark.py
oneflow/tests/: conftest.py
oneflow/tests/integration_tests/: test_batch.py  test_stream.py
oneflow/tests/unit_tests/: test_deploy_terraform.py
projectoneflow/: README.md
projectoneflow-framework/: README.md
projectoneflow-framework/src/projectoneflow/framework/contract/: __init__.py
projectoneflow-framework/src/projectoneflow/framework/runner/: local.py
projectoneflow/src/projectoneflow/core/schemas/: output.py  result.py
projectoneflow/src/projectoneflow/core/sources/: file_source.py  jdbc_source.py
projectoneflow/src/projectoneflow/core/task/: cli.py
projectoneflow/src/projectoneflow/core/task/spark/: cli.py
projectoneflow/tests/integration_tests/: test_stream.py
