[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oneflow"
description = "This Project is data engineering framework which implements all data engineering ingestion patterns"
dynamic = ["version","readme","dependencies"]
requires-python = ">=3.10"

authors = [
  {name = "Mukhesh Narra", email = "narramukhesh@gmail.com"}
]
maintainers = [
  {name = "Mukhesh Narra", email = "narramukhesh@gmail.com"}
]
classifiers = [
  "Development Status :: InDevelopment",
  "Natural Language :: English",
  "Intended Audience :: Data Engineers",
  "Topic :: DataEngineering",
]
keywords = [
  "dataengineering",
  "oneflow",
  "pyspark",
  "delta-lake",
  "Python"
]
license = "MIT"

[tool.setuptools.dynamic]
version = {attr = "oneflow.core.__version__"}
readme = {file = "README.md"}
dependencies= {file ="environment/requirements.txt"}

[project.urls]
bugs = "https://github.com/narramukhesh/projectone/issues"
changelog = "https://github.com/narramukhesh/projectone/tree/main/oneflow/HISTORY.md"
homepage = "https://github.com/narramukhesh/projectone/tree/main/oneflow"

[tool.setuptools]
package-dir = {"" = "src/"}

[tool.setuptools.packages.find]
where = ["src/"]
include = ["oneflow.*"]

[project.scripts]
oneflow = "oneflow.core.cli.cli:main"

[project.entry-points.oneflow_group]
task = "oneflow.core.task.cli:main"

[tool.semantic_release]
version_variables = ["src/oneflow/core/__init__.py:__version__"]
build_command = "python -m build --wheel"
commit_message = "chore: (oneflow){version}\n\nAutomatically generated by python-semantic-release"
tag_format = "v{version}-oneflow"
no_git_verify = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "HISTORY.md"

[tool.semantic_release.remote]
name="origin"
type="github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.branches.main]
match = "(main|master|prod)"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=oneflow",
    '--log-format="%(asctime)s %(levelname)s %(message)s"',
    '--log-date-format="%Y-%m-%d %H:%M:%S"',
]
pythonpath = "src"